[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Start.gd" type="Script" id=1]
[ext_resource path="res://UI/titleFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://UI/buttonFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://UI/kenpixel_mini_square.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Sounds/Start00.wav" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 4 )

[node name="StartScreen" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )
next_scene = "res://Scenes/Platformer.tscn"

[node name="Label" type="Label" parent="."]
margin_left = -1.0
margin_top = 36.0
margin_right = 251.0
margin_bottom = 89.0
rect_scale = Vector2( 1.2698, 1.07866 )
custom_fonts/font = ExtResource( 2 )
text = "TITLE"
align = 1
autowrap = true
uppercase = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -29.0
margin_top = 12.0
margin_right = 29.0
margin_bottom = 68.0

[node name="Button" type="Button" parent="VBoxContainer"]
margin_right = 58.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 3 )
text = "START"
flat = true

[node name="ButtonQuit" type="Button" parent="VBoxContainer"]
margin_top = 30.0
margin_right = 58.0
margin_bottom = 56.0
custom_fonts/font = ExtResource( 3 )
text = "Exit"
flat = true

[node name="Footer" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -10.0
custom_fonts/font = SubResource( 1 )
text = "2019 @jickingx"
align = 1
valign = 1

[node name="SoundStart" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
[connection signal="button_up" from="VBoxContainer/Button" to="." method="_on_Button_button_up"]
[connection signal="button_up" from="VBoxContainer/ButtonQuit" to="." method="_on_ButtonQuit_button_up"]
[connection signal="finished" from="SoundStart" to="." method="_on_SoundStart_finished"]
